--- a/back-end/back-end/appsettings.json
+++ b/back-end/back-end/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform 
@@ -11,6 +11,9 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "ClientId": "11111111-1111-1111-11111111111111111",
 
     "CallbackPath": "/signin-oidc"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=AlbumCollection;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
